--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,72 @@
 ---
+- name: Ensure database is created
+  become: true
+  become_user: postgres
+  postgresql_db:
+    name: "{{ mattermost_db_name }}"
 
-...
+- name: Ensure user has access to the database
+  become: yes
+  become_user: postgres
+  postgresql_user:
+    db: "{{ mattermost_db_name }}"
+    name: "{{ mattermost_db_user }}"
+    password: "{{ mattermost_db_password }}"
+    priv: ALL
+
+- name: Ensure user does not have unnecessary privilege
+  become: yes
+  become_user: postgres
+  postgresql_user: 
+    name: "{{ mattermost_db_user }}"
+    role_attr_flags: NOSUPERUSER,NOCREATEDB
+
+- name: 'Download binary from https://releases.mattermost.org'
+  get_url: 
+    url: 'https://releases.mattermost.com/{{ mattermost_version }}/mattermost-team-{{ mattermost_version }}-linux-amd64.tar.gz'
+    dest: /tmp/
+
+- name: Unpack mattermost archive.
+  unarchive: 
+    src: /tmp/mattermost-team-{{ mattermost_version }}-linux-amd64.tar.gz 
+    dest: /opt/
+    copy: no
+  args:
+    creates: /opt/mattermost/bin/platform
+
+- name: Create user to run mattermost service.
+  user: 
+    name: "{{ mattermost_user }}"
+    system: yes
+    createhome: no        
+
+- name: Apply mattermost config.json template
+  template:
+    src: mattermost-config.json.j2
+    dest: /opt/mattermost/config/config.json
+    owner: "{{ mattermost_user }}"
+    group: "{{ mattermost_user }}"
+    mode: 0644
+  
+- name: Change mattermost directory permissions
+  file:
+    path: /opt/mattermost
+    state: directory
+    owner: "{{ mattermost_user }}"
+    group: "{{ mattermost_user }}"
+    recurse: yes
+
+- name: Create mattermost systemd service 
+  template:
+    src: systemd.j2
+    dest: /etc/systemd/system/mattermost.service
+    owner: root
+    group: root
+    mode: 0664
+
+- name: Enable Mattermost service
+  service:
+    name: mattermost
+    enabled: yes
+    state: started 
+  notify: "restart services"
