Add working version of mattermost role
Add option to install an enterprise version:wq

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,6 +6,6 @@
 
 - name: Reload
   service:
-    ame: postgresql.service
+    name: postgresql.service
     state: reloaded
   listen: "restart services"
