Comment role stuff

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -22,5 +22,5 @@ galaxy_info:
     - messaging
 
 dependencies: []
-  - { role: stuvusIT.nginx }
-  - { role: stuvusIT.postgresql }
+#  - { role: stuvusIT.nginx }
+#  - { role: stuvusIT.postgresql }
