install: Create a `version` file
The created file contains the `mattermost` version. This enables the
possibility to fix #7 in the future.

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -36,3 +36,11 @@
     name: "{{ mattermost_user }}"
     system: yes
     createhome: no 
+
+- name: Create version file
+  copy:
+    content: "{{ mattermost_version }}"
+    dest: /opt/mattermost/version
+    force: yes
+    owner: "{{ mattermost_user }}"
+    mode: 0644
