install: Update if installed version != configured version
Previously, mattermost was never updated after its initial installation.
See #7.

Now we check the installed version and update mattermost if it doesn't
equal the configured version.

In https://docs.mattermost.com/administration/upgrade.html it's suggested
to keep certain folders when updating, so we keep those if they exist.

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,4 +1,11 @@
 ---
+
+- name: Create user to run Mattermost service
+  user:
+    name: "{{ mattermost_user }}"
+    system: yes
+    createhome: no
+
 - name: Place Mattermost licence file
   copy:
     src: "{{ inventory_hostname }}/mattermost_licence"
