--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,46 +1,24 @@
 ---
-- name: 'Download binary from https://releases.mattermost.com'
-  get_url: 
-    url: 'https://releases.mattermost.com/{{ mattermost_version }}/mattermost-team-{{ mattermost_version }}-linux-amd64.tar.gz'
-    dest: "{{ global_cache_dir | mandatory }}/"
-  when: not mattermost_enterprise
-  become: false
-  delegate_to: localhost
 
-- name: 'Download enterprise version binary from https://releases.mattermost.com'
-  get_url: 
-    url: 'https://releases.mattermost.com/{{ mattermost_version }}/mattermost-{{ mattermost_version }}-linux-amd64.tar.gz'
-    dest: "{{ global_cache_dir | mandatory }}/"
-  when: mattermost_enterprise
-  become: false
-  delegate_to: localhost
+- name: Check if the desired mattermost version exists
+  stat:
+    path: /opt/mattermost-versions/{{ mattermost_version }}
+  register: mattermost_previous_stat
 
-- name: Unpack Mattermost archive
-  unarchive: 
-    src: "{{ global_cache_dir }}/mattermost-team-{{ mattermost_version }}-linux-amd64.tar.gz"
-    dest: /opt/
-  args:
-    creates: /opt/mattermost/bin/platform
-  when: not mattermost_enterprise
+- import_tasks: update.yml
+  when: not mattermost_previous_stat.stat.exists
 
-- name: Unpack Mattermost enterprise archive
-  unarchive: 
-    src: "{{ global_cache_dir }}/mattermost-{{ mattermost_version }}-linux-amd64.tar.gz"
-    dest: /opt/
-  args:
-    creates: /opt/mattermost/bin/platform
-  when: mattermost_enterprise
+- name: Check if any version is deployed
+  stat:
+    path: /opt/mattermost
+  register: mattermost_symlink_stat
 
-- name: Create user to run Mattermost service
-  user: 
-    name: "{{ mattermost_user }}"
-    system: yes
-    createhome: no 
+- name: Get the previous mattermost version
+  set_fact:
+    mattermost_previous_version: '{{ mattermost_symlink_stat.stat.lnk_target | basename }}'
+  when: mattermost_symlink_stat.stat.lnk_target is defined
 
-- name: Create version file
-  copy:
-    content: "{{ mattermost_version }}"
-    dest: /opt/mattermost/version
-    force: yes
-    owner: "{{ mattermost_user }}"
-    mode: 0644
+- import_tasks: deploy.yml
+  when: mattermost_previous_version is not defined or mattermost_previous_version != mattermost_version
+
+- import_tasks: collect-garbage.yml
