--- a/tasks/update.yml
+++ b/tasks/update.yml
@@ -9,18 +9,17 @@
     mattermost_archive_name: mattermost-{{ mattermost_version }}
   when: mattermost_enterprise
 
-- name: 'Download binary from https://releases.mattermost.com'
+- name: Download binary from https://releases.mattermost.com
   get_url:
-    url: 'https://releases.mattermost.com/{{ mattermost_version }}/{{ mattermost_archive_name }}-linux-amd64.tar.gz'
+    url: https://releases.mattermost.com/{{ mattermost_version }}/{{ mattermost_archive_name }}-linux-amd64.tar.gz
     dest: "{{ global_cache_dir | mandatory }}/"
   become: false
   delegate_to: localhost
 
 - name: Unpack Mattermost archive
   unarchive:
-    src: "{{ global_cache_dir }}/{{ mattermost_archive_name }}-linux-amd64.tar.gz"
+    src: '{{ global_cache_dir }}/{{ mattermost_archive_name }}-linux-amd64.tar.gz'
     dest: /tmp
-  args:
 
 - name: Make sure the mattermost-versions folder exists
   file:
