--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -52,7 +52,7 @@
   failed_when: '"SqlTeamStore.Save" not in output.stderr and output.rc != 0'
   changed_when: '"store.sql_team.save.domain_exists.app_error" not in output.stderr and output.rc == 0'
 
-- name: Create admin users   
+- name: Create admin users
   shell: "./platform user create {% if item.lastname is defined %}--lastname {{ item.lastname }}{% endif %} {% if item.firstname is defined %}--firstname {{ item.firstname }}{% endif %} --email {{ item.email }} --password {{ item.password }} --username {{ item.username }} --system_admin"
   with_items:
     "{{ mattermost_admins }}"
@@ -61,6 +61,7 @@
   register: output
   failed_when: '"SqlUserStore.Save" not in output.stderr and output.rc != 0'
   changed_when: 'output.rc == 0'
+  no_log: True
 
 - name: Create channels
   shell: "./platform channel create --name {{ item.name }} --display_name {{ item.display_name }} --team {{ item.team }} {% if item.private | default(false) %}--private{% endif %}"
